fixed issue where last conversation was cut off

--- a/src/scss/components/_inbox-sidebar-left.scss
+++ b/src/scss/components/_inbox-sidebar-left.scss
@@ -36,7 +36,7 @@
 
 .Conversations {
   border-right: solid 1px #DFE9F2;
-  height: 100vh;
+  height: 92vh;
   overflow-x: hidden;
   overflow-y: scroll;
 }
